compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_variable_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1296
expression: let theAnswer = 42
snapshot_kind: text
---
----- SOURCE CODE
let theAnswer = 42

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let theAnswer = 42
  │     ^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: the_answer
